# seed/ts-sdk/x-fern-global-parameters/serde/src/serialization/resources/products/types/SearchProductsRequestConfig.ts
@@ -1,0 +1,20 @@
+// This file was auto-generated by Fern from our API Definition.
+
+import type * as SeedApi from "../../../../api/index.js";
+import * as core from "../../../../core/index.js";
+import type * as serializers from "../../../index.js";
+
+export const SearchProductsRequestConfig: core.serialization.ObjectSchema<
+    serializers.SearchProductsRequestConfig.Raw,
+    SeedApi.SearchProductsRequestConfig
+> = core.serialization.object({
+    currency: core.serialization.string().optional(),
+    limit: core.serialization.number().optional(),
+});
+
+export declare namespace SearchProductsRequestConfig {
+    export interface Raw {
+        currency?: string | null;
+        limit?: number | null;
+    }
+}
